fix: Fix remove bg-attach on mobile background-img

--- a/style.css
+++ b/style.css
@@ -97,9 +97,11 @@ h2 {
     h1 {font-size: 3em;}
     .subtitle {font-size: .8em;}
     body {
-        background-size: cover;
+        background-attachment: none;
+        position: fixed;
         padding: 0;
     }
+    .skills-container {padding: 20px;}
 }
 
 @media (max-width: 400px) {
